# ring

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLAUDE.md.bak  MANUAL.md  README.md  RELEASE-NOTES.md  install-ring.ps1  install-ring.sh  test-sample.ts  test-tdd-improvements.md  test-verification-improvements.md
.claude-plugin/: marketplace.json  plugin.json
.codex/: INSTALL.md  ring-bootstrap.md  ring-codex
agents/: business-logic-reviewer.md  code-reviewer.md  full-reviewer.md  review-orchestrator.md  security-reviewer.md  write-plan.md
commands/: metrics.md  next-skill.md  review.md  validate.md  which-skill.md  worktree.md
docs/: AGENT_DESIGN.md  INFRASTRUCTURE.md  PROJECT_RULES.md  PROMPT_ENGINEERING.md  WORKFLOWS.md  coderabbit-instructions.md  skills-quick-reference.md  webinar-building-plugins-outline.md
hooks/: README-claude-md-bootstrap.md  claude-md-bootstrap.py  claude-md-bootstrap.sh  hooks.json  session-start.sh
installer/: SECURITY_FIXES.md  install-ring.ps1  install-ring.sh  pyproject.toml  requirements.txt
installer/ring_installer/: __init__.py  __main__.py  core.py
installer/ring_installer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
installer/ring_installer/adapters/: __init__.py  base.py  claude.py  cline.py  cursor.py  factory.py  opencode.py
installer/ring_installer/manifests/: platforms.json
installer/ring_installer/transformers/: __init__.py  base.py  cline_prompts.py  hooks.py  skill.py
installer/ring_installer/utils/: __init__.py  fs.py  platform_detect.py  version.py
installer/tests/: conftest.py  test_adapters.py  test_core.py  test_transformers.py  test_utils.py
installer/tests/fixtures/commands/: sample-command.md
installer/tests/fixtures/hooks/: hooks.json
installer/tests/fixtures/skills/sample-skill/: SKILL.md
lib/: README.md  common.sh  compliance-validator.sh  initialize-skills.sh  metrics-tracker.sh  output-validator.sh  preflight-checker.sh  skill-composer.sh  skill-matcher.sh
opencode/: AGENTS.md  README.md  installer.sh  opencode.json
testing/: README.md  test-brainstorming-improvements.md  test-debugging-improvements.md  test-review-orchestrator.md  (+3 more)
(+717 files in other folders)
